--- a/index.html
+++ b/index.html
@@ -4,9 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Assignment-1</title>
 </head>
 <body>
-Bismillah..
+<section id="hero">
+    <div class="container">
+        <div class="img-container">
+            <img width="168px" src="./assets/Group.png">
+        </div>
+        <div class="text-container">
+            <h1 class="title">"In the near future, I hope to become a Developer."</h1>
+            <p class="description">Web development is an excellent approach to reaching a broad audience. It is one of the demandable jobs that has grown so fast.</p>
+            <button class="btn-container">Contact with me</button>
+        </div>
+
+    </div>
+   
+</section>
+<section #id="purpose">
+<div class="first">
+    <h1 class="title2" >Why web development??</h1>
+    <p class="description">Web development is an excellent approach to reaching a broad audience. It is one of the demandable jobs that has grown so fast.</p>
+</div>
+<div>
+    <div>
+        <div>
+        <h1>I will Do Coding and Change The World</h1>
+        <p>Coding is my passion and i want my carrier by this excellent task.</p>
+        <button>Learn more</button>
+    </div>
+        <div><img src="./assets/Layer_1.png"></div>
+    </div>
+</div>
+<div>
+        <div><img src="./assets/Group 3.png"></div>
+        <div>
+        <h1>I will help People by creating Modern Web System</h1>
+        <p>Everywhere in the industry and business, website is needed.</p>
+        <button>Learn more</button>
+        </div>
+</div>
+<div>
+    <div>
+        <div>
+        <h1>The fastest growing it-world needs developers</h1>
+        <p>Everywhere in the industry and business, website is needed.</p>
+        <button>Learn more</button>
+    </div>
+        <div><img src="./assets/Group 4.png"></div>
+    </div>
+</div>
+</section>
 </body>
 </html>
