--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
     </div>
    
 </section>
-<section #id="purpose">
+<section class="purpose">
 <div class="first">
-    <h1 class="title2" >Why web development??</h1>
-    <p class="description">Web development is an excellent approach to reaching a broad audience. It is one of the demandable jobs that has grown so fast.</p>
+    <h1 class="second-title" >Why web development??</h1>
+    <p class="description">Web development is an excellent approach to reaching a broad audience. It is one of the demandable jobs that has grown so fast.It is a great way of exploring.</p>
 </div>
 <div>
     <div>
         <div>
         <h1>I will Do Coding and Change The World</h1>
-        <p>Coding is my passion and i want my carrier by this excellent task.</p>
+        <p>Coding is my passion and i want my carrier through this site.</p>
         <button>Learn more</button>
     </div>
         <div><img src="./assets/Layer_1.png"></div>
