--- a/index.html
+++ b/index.html
@@ -25,32 +25,32 @@
 <section class="purpose">
 <div class="first">
     <h1 class="second-title" >Why web development??</h1>
-    <p class="description">Web development is an excellent approach to reaching a broad audience. It is one of the demandable jobs that has grown so fast.It is a great way of exploring.</p>
+    <p class="description">Web development is an excellent approach to reaching a broad audience. It is one of the demandable jobs that has grown so fast.</p>
 </div>
 <div>
-    <div>
-        <div>
-        <h1>I will Do Coding and Change The World</h1>
-        <p>Coding is my passion and i want my carrier through this site.</p>
-        <button>Learn more</button>
+    <div class="first-purpose">
+        <div class="purpose-content">
+        <h1 class="first-purpose-title">I will Do Coding and Change The World</h1>
+        <p class="description">Coding is my passion and i want my carrier through this site.</p>
+        <button class="purpose-button">Learn more</button>
     </div>
         <div><img src="./assets/Layer_1.png"></div>
     </div>
 </div>
-<div>
+<div class="second-purpose">
         <div><img src="./assets/Group 3.png"></div>
-        <div>
-        <h1>I will help People by creating Modern Web System</h1>
-        <p>Everywhere in the industry and business, website is needed.</p>
-        <button>Learn more</button>
+        <div class="purpose-content">
+        <h1 class="first-purpose-title">I will help People by creating Modern Web System</h1>
+        <p class="description">Everywhere in the industry and business, website is needed.</p>
+        <button class="purpose-button">Learn more</button>
         </div>
 </div>
 <div>
-    <div>
-        <div>
-        <h1>The fastest growing it-world needs developers</h1>
-        <p>Everywhere in the industry and business, website is needed.</p>
-        <button>Learn more</button>
+    <div class="third-purpose">
+        <div class="purpose-content">
+        <h1 class="first-purpose-title">The fastest growing it-world needs developers</h1>
+        <p class="description">Everywhere in the industry and business, website is needed.</p>
+        <button class="purpose-button">Learn more</button>
     </div>
         <div><img src="./assets/Group 4.png"></div>
     </div>
