--- a/index.html
+++ b/index.html
@@ -56,5 +56,17 @@
     </div>
 </div>
 </section>
+<section class="inspiration"> 
+        <div>
+            <h1 class="second-title" >My Inspiration</h1>
+            <p class="description">I like adventure and exploring things. This quality inspires me the most to my journey to web development. My responsibity towards society also inspires me.</p>
+        </div>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/SKr-1DkO8qw?si=vov5fNu06sEhIFZk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    
+    
+</section>
+
 </body>
 </html>
