target-inspiration committed

--- a/index.html
+++ b/index.html
@@ -68,5 +68,31 @@
     
 </section>
 
+<section class="target"> 
+    <div>
+        <h3>My Current Target</h3>
+        <p class="description">I have started my journey of learning web development by learning html and css. Then i will learn css inshaallah as my current target of learning web development.
+        </p> 
+    </div>
+    <section class="items">
+    <div class="item1">
+        <img src="./assets/html.png">
+        <h1 class="first-target-title">HTML</h1>
+        <p class="target-description">HTML is the standard markup language for creating Web pages</p>
+        <a class="description" href="Learn more">Learn more</a>
+    </div>
+    <div class="item2">
+        <img src="./assets/css.png" alt="">
+        <h1  class="first-target-title" > CSS</h1>
+        <p class="target-description">CSS is a style sheet language used for styling document </p>
+        <a class="description" href="Learn more">Learn more</a>
+    </div>
+    <div class="item3">
+        <img src="./assets/js.png" alt="">
+        <h1  class="first-target-title" >JavaScript</h1>
+        <p class="target-description">JavaScript is used for back-end web developing . </p>
+        <a class="description" href="Learn more">Learn more</a>
+    </div>
+</section>
 </body>
 </html>
